--- a/packages/nzt-web/package.json
+++ b/packages/nzt-web/package.json
@@ -15,7 +15,8 @@
     "export": "next build && next export",
     "start": "next start",
     "test": "concurrently \"yarn start \" \"cypress open\"",
-    "test:ci": "cypress run --headless"
+    "test:ci": "cypress run --headless",
+    "contracts:external": "yarn shx rm -rf './src/generated' && yarn shx cp -r '../vite-app-ts/src/generated/contract-types' './src/generated/'"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.9",
@@ -72,6 +73,7 @@
     "@types/react-router-dom": "^5.1.7",
     "concurrently": "^6.0.0",
     "cypress": "^6.5.0",
+    "shx": "^0.3.4",
     "tailwindcss": "^3.0.15",
     "typescript": "^4.1.2"
   }
