--- a/packages/hardhat-ts/package.json
+++ b/packages/hardhat-ts/package.json
@@ -21,23 +21,29 @@
     "@eth-optimism/hardhat-ovm": "^0.2.4",
     "@ethereumjs/vm": "^5.6.0",
     "@ethersproject/providers": "^5.5.2",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.10",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
+    "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.4.2",
     "@tenderly/hardhat-tenderly": "^1.0.13",
     "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^4.0.0",
     "chalk": "^4.1.2",
+    "dotenv": "^14.3.2",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.3",
     "hardhat": "^2.8.2",
+    "hardhat-abi-exporter": "^2.8.0",
     "hardhat-deploy": "^0.9.24",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
+    "hardhat-gas-reporter": "^1.0.7",
     "ipfs-http-client": "^54.0.2",
     "qrcode-terminal": "^0.12.0",
     "typechain": "^7.0.0"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "@nomiclabs/hardhat-solhint": "^2.0.0",
+    "@openzeppelin/hardhat-upgrades": "^1.13.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
     "eslint": "^8.6.0",
