--- a/packages/hardhat-ts/tsconfig.json
+++ b/packages/hardhat-ts/tsconfig.json
@@ -1,34 +1,26 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "types": ["node", "ethers"],
-    "allowJs": false,
-    "skipLibCheck": false,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "typeRoots": ["node_modules/@types", "src/helpers/definitions"] /* List of folders to include type definitions from. */,
-    "forceConsistentCasingInFileNames": true,
-    "module": "commonjs",
-    "moduleResolution": "Node",
-    "incremental": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "rootDir": ".",
-    "baseUrl": ".",
-    "outDir": "dist",
-    "paths": {
-      "~~/*": ["./src/*"],
-      "scripts/*": ["./scripts/*"],
-      "helpers/*": ["./helpers/*"],
-      "contracts/*": ["./contracts/*"],
-      "tests/*": ["./tests/*"],
-      "typechain/*": ["./typechain/*"]
-    }
+      "allowSyntheticDefaultImports": true,
+      "alwaysStrict": true,
+      "declaration": true,
+      "esModuleInterop": true,
+      "resolveJsonModule": true,
+      "forceConsistentCasingInFileNames": true,
+      "incremental": true,
+      "composite": true,
+      "lib": ["esnext"],
+      "module": "CommonJS",
+      "moduleResolution": "node",
+      "noImplicitThis":true,
+      "outDir": "dist",
+      "skipLibCheck": true,
+      "strict": true,
+      "strictNullChecks": true,
+      "target": "es6",
   },
-  "include": ["types", "scripts", "test", "helpers", "./hardhat.config.ts", "./deploy"],
-  "exclude": ["**/node_modules", ".husky", "./src/styles/css", "./tailwind.config.js"],
-  "files": ["./hardhat.config.ts", "helpers/types/__global.ts"]
+
+  "files": ["./hardhat.config.ts"],
+  "include": [
+      "./src", "./typechain", "abi/**/*.json"
+  ]
 }
